<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_blog"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_blog" />
        <item
            android:id="@+id/nav_forum"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_forum" />
        <item
            android:id="@+id/nav_add_blog"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_add_blog" />
    </group>

    <item android:title="@string/menu_system">
        <menu>


            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_login" />
            <item
                android:id="@+id/nav_register"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_register" />
            <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_setting" />
        </menu>
    </item>

</menu>
