<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_blog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sathapornsunthornpan.onlinebikercommunity.blog.AddBlogActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/blog_menu_insert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textAlignment="center"
            android:textSize="28sp"
            android:padding="10dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:text="@string/blog_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtViewTitle"
                    android:layout_weight="1.35"
                    android:textAlignment="center" />

                <EditText
                    android:layout_width="252dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editBlogTitle" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:text="@string/blog_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewDescription"
                    android:layout_weight="1"
                    android:textAlignment="center" />

                <EditText
                    android:layout_width="252dp"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/editBlogDescription" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:text="@string/blog_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewImage"
                    android:layout_weight="1.62"
                    android:textAlignment="center" />

                <EditText
                    android:layout_width="252dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editBlogImage" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/blog_tags"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/textViewTags"
                    android:layout_weight="1.62"
                    android:textAlignment="center"
                    android:gravity="center_vertical|center_horizontal" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <CheckBox
                            android:text="@string/blog_tags_101"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/checkBoxBlog1" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <CheckBox
                            android:text="@string/blog_tags_102"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/checkBoxBlog2" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <CheckBox
                            android:text="@string/blog_tags_103"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/checkBoxBlog3" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <CheckBox
                            android:text="@string/blog_tags_104"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/checkBoxBlog4" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <CheckBox
                            android:text="@string/blog_tags_105"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/checkBoxBlog5" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <CheckBox
                            android:text="@string/blog_tags_106"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/checkBoxBlog6" />
                    </TableRow>

                </TableLayout>

            </TableRow>

        </TableLayout>

        <Button
            android:text="@string/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnInsertBlog"
            android:layout_margin="10dp" />


    </LinearLayout>
</RelativeLayout>
